# flagsmith-common

./: .env-ci  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  manage.py  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: conventional-commit.yml  linting-and-formatting.yml  publish.yml  python-test.yml
common/features/: serializers.py
common/features/multivariate/: serializers.py
common/features/versioning/: serializers.py
common/metadata/: serializers.py
common/projects/: permissions.py
common/segments/: serializers.py
docker/: docker-compose.local.yml
settings/: dev.py
src/common/: lint_tests.py  types.py
src/common/app/: urls.py  utils.py  views.py
src/common/core/: constants.py  logging.py  main.py  metrics.py  middleware.py  otel.py  sentry.py  types.py  urls.py  utils.py  views.py
src/common/core/cli/: healthcheck.py  run.py
src/common/core/docgen/: events.py
src/common/core/management/commands/: docgen.py  (+1 more)
src/common/core/templates/: docgen-events.md  docgen-metrics.md
src/common/environments/: permissions.py
src/common/gunicorn/: conf.py  constants.py  logging.py  metrics.py  middleware.py  processors.py  utils.py
src/common/metadata/: serializers.py  types.py
src/common/prometheus/: __init__.py  constants.py  multiprocessing.py  types.py  utils.py
src/common/segments/: serializers.py
src/common/test_tools/: plugin.py  types.py  utils.py
src/flagsmith_models/: __init__.py  types.py
src/flagsmith_schemas/: api.py  constants.py  dynamodb.py  pydantic_types.py  types.py  utils.py  validators.py
src/flagsmith_schemas/dynamodb/: types.py
src/task_processor/: admin.py  apps.py  constants.py  decorators.py  exceptions.py  managers.py  metrics.py  models.py  processor.py  routers.py  task_registry.py  threads.py  types.py  utils.py
src/task_processor/migrations/: 0013_add_last_picked_at.py  0014_add_trace_context.py  0015_add_is_disabled.py
src/task_processor/migrations/sql/: 0013_get_recurringtasks_to_process.sql  0015_get_recurringtasks_to_process.sql
tests/: __init__.py  conftest.py
tests/integration/core/: conftest.py  test_commands.py  test_main.py  test_otel.py  test_views.py
tests/integration/core/snapshots/: test_docgen__events__runs_expected.txt  test_docgen__metrics__runs_expected.txt  test_metrics__default_request__returns_expected.txt  test_metrics__return_expected.txt
tests/integration/flagsmith_models/: test_flagsmith_models.py
tests/integration/flagsmith_schemas/: test_api.py  test_dynamodb.py  test_types.py
tests/integration/flagsmith_schemas/data/: flagsmith_environment_api_key.json  flagsmith_environments.json  flagsmith_environments_compressed.json  flagsmith_environments_v2:_META.json  flagsmith_environments_v2:_META_compressed.json  flagsmith_environments_v2:identity_override.json  flagsmith_identities.json
tests/integration/gunicorn/: conftest.py  test_metrics_server.py
tests/unit/common/app/: test_utils.py
tests/unit/common/core/: test_docgen_events.py  test_logging.py  test_main.py  test_middleware.py  test_otel.py  test_run.py  test_sentry.py  test_utils.py
tests/unit/common/gunicorn/: test_conf.py  test_logging.py  test_middleware.py  test_utils.py
tests/unit/common/lint_tests/: test_lint_tests.py
tests/unit/common/test_tools/: test_plugin.py
tests/unit/task_processor/: conftest.py  test_unit_task_processor_apps.py  test_unit_task_processor_decorators.py  test_unit_task_processor_health.py  test_unit_task_processor_managers.py  test_unit_task_processor_models.py  test_unit_task_processor_monitoring.py  test_unit_task_processor_processor.py  test_unit_task_processor_routers.py  test_unit_task_processor_tasks.py  test_unit_task_processor_threads.py  test_unit_task_processor_utils.py
