[tool.poetry]
name = "flagsmith_common"
version = "0.1.0"
description = "A repository for including code that is required in multiple flagsmith repositories"
authors = ["Matthew Elwell <matthew.elwell@flagsmith.com>"]
readme = "README.md"
packages = [{ include = "common"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "*"
djangorestframework = "*"
drf-writable-nested = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
flake8 = "~6.0.0"
black = "~23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
