[tool.poetry]
name = "flagsmith_common"
version = "1.4.1"
description = "A repository for including code that is required in multiple flagsmith repositories"
authors = ["Matthew Elwell <matthew.elwell@flagsmith.com>"]
readme = "README.md"
packages = [{ include = "common"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "<5.0.0"
djangorestframework = "*"
drf-writable-nested = "*"
flagsmith-flag-engine = "*"
djangorestframework-recursive = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
use_parentheses=true
multi_line_output=3
include_trailing_comma=true
line_length=79
known_first_party=['flagsmith','api','app','core','features','environments']
known_third_party=[
  'django',
  'rest_framework',
  'saml2',
  'drf_yasg2',
  'pytest',
  'rest_framework_recursive',
]
skip = ['migrations', '.venv']
